--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "grantha-ocr-converter",
   "version": "1.0.0",
@@ -6,13 +5,12 @@
   "main": "server.js",
   "scripts": {
     "build": "mkdir -p public && cp index.html public/ && esbuild index.tsx --bundle --platform=browser --outfile=public/bundle.js",
-    "start": "node server.js"
+    "start": "yarn build && node server.js"
   },
   "dependencies": {
     "@google/genai": "^1.12.0",
-    "express": "^4.19.2"
-  },
-  "devDependencies": {
+    "express": "^4.19.2",
     "esbuild": "^0.23.0"
-  }
+  },
+  "devDependencies": {}
 }
